Stretch: Bugfixed and code cleanup

--- a/css/index.css
+++ b/css/index.css
@@ -290,7 +290,6 @@ header nav a:hover {
     margin-top: 12px;
 }
 
-
 .btn {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -383,7 +382,6 @@ header nav a:hover {
 }
 
 
-
 @media only screen and (max-width: 799px) {
     .container {
         width: 100%;
@@ -404,17 +402,17 @@ header nav a:hover {
         max-width: 48%;
         flex: 1 1 48%;
     }
+    footer nav a {
+        padding-right: 5px;
+    }
 }
 @media only screen and (max-width: 640px) {
-    header {
-        padding-left: 15px;
-    }
     header nav {
-        padding-left: 50px;
+        padding-left: 20px;
     }
     header nav a {
-        padding-left: 0;
-        padding-right: 0;
+        padding: 0 3px;
+        line-height: 24px;
     }
     .top-content .text-container {
         width: 100%;
